2004-03-12    <dgay@barnowl.research.intel-research.net>

	* configure.ac: Bump version.

	* src/jtagio.cc (safewrite): write may write only part of the
	data (problem tended to show up with USB serial ports). Fix.

2004-03-08    <dgay@barnowl.research.intel-research.net>

	* scripts/start-avarice: add --erase option when programming

2004-02-25  Theodore A. Roth  <troth@openavr.org>

	* src/jtagprog.cc (eraseProgramMemory): Add comment noting that this is
	really a chip erase operation.
	(downloadToTarget): Don't erase the device here if programming.
	* src/main.cc (main): Never erase the device unless the user explicitly
	gives the --erase option.
	When programming without the --erase option, issue a warning about the
	change in behavior.

2004-02-06  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.

	* doc/avarice.1:
	* src/jtag.h:
	* src/jtagrw.cc:
	* src/main.cc:
	Add --read-lockbits (-l) option for reading the lockbits.

2004-01-29  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* scripts/io_gen.py: New file for helping to generate io register defs.

2004-01-28  Theodore A. Roth  <troth@openavr.org>
[Contributed by Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* configure.ac (AC_INIT): Bump version.
	* src/ioreg.cc (atmega162_io_registers): Define.
	* src/ioreg.h (atmega162_io_registers): Declare.
	* src/jtagio.cc (deviceDefinitions): Install mega162 io register defs.

2004-01-21  Theodore A. Roth  <troth@openavr.org>
[Contributed by Bjoern Haase <bjoern.m.haase@web.de>]

	* configure.ac (AC_INIT): Bump version.
	* src/ioreg.cc: Fix spelling error.
	Add cvs Id keyword.
	(atmega169_io_registers): Define.
	* src/ioreg.h: Fix spelling error.
	Add cvs Id keyword.
	(atmega169_io_registers): Declare.
	* src/jtagio.cc (deviceDefinitions): Install mega169 io register defs.

2003-12-12  Theodore A. Roth  <troth@openavr.org>

	* Release version 2.2.

2003-12-12  Theodore A. Roth  <troth@openavr.org>
