@@ -1,11 +1,20 @@
-2004-03-12    <dgay@barnowl.research.intel-research.net>
+2004-05-26  Theodore A. Roth  <troth@openavr.org>
+[Contributed by Onno van Eijk <onno@gorgoz.org>]
+
+	* configure.ac (AC_INIT): Bump version.
+
+	* src/ioreg.cc (atmega32_io_registers): Define.
+	* src/ioreg.h (atmega32_io_registers): Declare.
+	* src/jtagio.cc (deviceDefinitions): Install mega32 io register defs.
+
+2004-03-12  David Gay  <dgay@barnowl.research.intel-research.net>
 
 	* configure.ac: Bump version.
 
 	* src/jtagio.cc (safewrite): write may write only part of the
 	data (problem tended to show up with USB serial ports). Fix.
 
-2004-03-08    <dgay@barnowl.research.intel-research.net>
+2004-03-08  David Gay  <dgay@barnowl.research.intel-research.net>
 
 	* scripts/start-avarice: add --erase option when programming
 
